recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:2: error: not found: value n
  if (n==0){
      ^Spiral:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return 0
           ^Spiral:3: warning: enclosing method spiral has result type Unit: return value discarded
    return 0
    ^Spiral:7: error: not found: value n
    spiral(n-1,angle,length + increment, increment)
           ^